--- a/app/src/main/res/layout/login_act.xml
+++ b/app/src/main/res/layout/login_act.xml
@@ -7,7 +7,7 @@
 
     <ImageView android:layout_width="200dp"
                android:layout_height="200dp"
-    android:src="@drawable/an"
+    android:src="@drawable/kotlin2"
     android:paddingBottom="10dp"/>
 
     <TextView android:layout_width="wrap_content"
