--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,6 @@
     <color name="hijaucerah">#00ff00</color>
     <color name="hitampekat">#000000</color>
     <color name="putih">#ffffff</color>
+    <color name="perak">#c0c0c0</color>
 
 </resources>
