--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical" android:layout_width="match_parent"
+              android:orientation="vertical"
+              android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:gravity="center"
               android:background="@color/putih">
     <ImageView
             android:layout_width="match_parent"
             android:layout_height="254dp"
-            android:src="@drawable/an3"
-            android:padding="50dp"/>
+            android:src="@drawable/kotlin"
+            android:paddingBottom="10dp"/>
     <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -17,8 +18,7 @@
             android:textAlignment="center"
             android:textColor="@color/hitampekat"
             android:paddingBottom="15dp"
-            android:textSize="30sp"
-    />
+            android:textSize="30sp"/>
     <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
