--- a/app/src/main/res/layout/fr_upload.xml
+++ b/app/src/main/res/layout/fr_upload.xml
@@ -1,16 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@android:color/holo_red_light"
-    >
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:gravity="center"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="@drawable/background3"
+              android:orientation="vertical">
 
-    <TextView
-            android:layout_width="wrap_content"
+    <LinearLayout android:layout_width="248dp"
+                  android:layout_height="164dp"
+                  android:layout_gravity="center"
+                  android:padding="10dp"
+                  android:background="@drawable/sahpe_log_abu"
+                  android:layout_margin="10dp"
+                  android:orientation="vertical">
+
+
+        <ImageView android:layout_width="match_parent"
+                   android:layout_height="127dp"
+                   android:id="@+id/img_placeholder1"
+                   android:src="@drawable/ic_file_upload_black_24dp"
+                   tools:src="@drawable/ic_file_upload_black_24dp"/>
+
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/hitampekat"
+                android:textStyle="bold|italic"
+                android:text="Upload image dari galeri"
+                android:textAlignment="center"
+        />
+    </LinearLayout>
+
+    <androidx.core.widget.ContentLoadingProgressBar
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Upload Fragment"
-            android:textSize="30sp"
-            android:layout_centerInParent="true"
+            android:id="@+id/progresDownload1"
+            android:visibility="gone"
+            style="?android:attr/progressBarStyle"/>
+
+    <EditText android:layout_width="285dp"
+              android:layout_height="194dp"
+              android:id="@+id/et_namaPenulis"
+              android:background="@drawable/sahpe_log_putih"
+              android:hint="masukan keterangan"
+              android:layout_margin="10sp"
+              android:padding="10dp"
+              android:inputType="text"
     />
 
-</RelativeLayout>
+    <Button android:layout_width="152dp"
+            android:layout_height="wrap_content"
+            android:text="UPLOAD"
+            android:background="@drawable/sahpe_log_putih"
+            android:layout_margin="20sp"
+            android:id="@+id/btn_simpan"
+    />
+
+</LinearLayout>
