--- a/app/src/main/res/layout/navbotton_act.xml
+++ b/app/src/main/res/layout/navbotton_act.xml
@@ -5,13 +5,15 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/holo_blue_bright"
+        android:background="@color/putih"
         tools:context=".NavBottom_Act">
 
     <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
+            android:background="@color/jingga"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content" android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"/>
 
     <LinearLayout
             android:id="@+id/fragment_container"
@@ -27,6 +29,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
+            android:backgroundTint="@color/jingga"
             app:menu="@menu/botton_navigation"
             android:background="?android:attr/windowBackground"
     />
