--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -2,11 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
+
 >
-    <item android:id="@+id/action_logout"
-          android:title="Logout"
-          android:orderInCategory="100"
-          android:icon="@drawable/baseline_exit_to_app_24"
+    <item android:id="@+id/action_profile"
+          android:title="Profile"
+          android:orderInCategory="150"
+          android:icon="@mipmap/ic_profile2"
           app:showAsAction="always"/>
 
 </menu>
